fix: Make navbar responsive on small screens
The title was overflowing the selectors on larger mobile screens (e.g.
Pixel). Increased the media query size to move the title on top.

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -92,7 +92,7 @@
 }
 
 /* Move title above selectors on small screens */
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 456px) {
   .navbar {
     height: 51px
   }
